# NeobankClientWidgets

./: CMakeLists.txt  constants.h  converters.h  deserializers.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  res.qrc
models/: account.h  transaction.h  user.h
network/: socketwrapper.cpp  socketwrapper.h
pages/: accountspage.cpp  accountspage.h  accountspage.ui  connectpage.cpp  connectpage.h  connectpage.ui  dashboardpage.cpp  dashboardpage.h  dashboardpage.ui  loginpage.cpp  loginpage.h  loginpage.ui  registrationpage.cpp  registrationpage.h  registrationpage.ui  transactionspage.cpp  transactionspage.h  transactionspage.ui  transferdialog.cpp  transferdialog.h  transferpage.cpp  transferpage.h  transferpage.ui
protocols/: protocolvalidator.cpp  protocolvalidator.h
services/: accountsservice.cpp  accountsservice.h  authservice.cpp  authservice.h  transactionsservice.cpp  transactionsservice.h
styles/: styles.qss
